name:                hbook
version:             0.0.0.1
synopsis:            Address book query tool for Mutt
description:         Please see README.md
homepage:            https://github.com/illis/hbook#readme
license:             BSD3
license-file:        LICENSE
author:              P
maintainer:          parimal@beyond8labs.com
copyright:           2016
category:            Mail
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hbook-exe
  hs-source-dirs:      app
                     , src
  other-modules:       VCard
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , megaparsec
                     , hbook
  default-language:    Haskell2010

test-suite hbook-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
                     , test
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , megaparsec
                     , hspec
                     , hspec-megaparsec
                     , QuickCheck
                     , quickcheck-instances
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  cpp-options:         -DTEST
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/illis/hbook
